--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ RESERVATIONEN / BITTE TELEFONISCH <br>
 ........................................................<br>
 TÄGLICH WARME KÜCHE AB 12:00 BIS 14:00 UHR UND ABENDS WIEDER AB 18:00 UHR BIS 21:30<br>
 DER AKTUELLE WOCHEN-BURGER IM STICKEREI <a href="http://restaurantstickerei.tumblr.com/">BLOG</a><br>
-WIR SIND MANCHMAL AUCH MUSIKALISCH, MEHR INFOS ÜBER UNSERE <a href="http://www.facebook.com/pages/Sankt-Gallen-Switzerland/Cafe-Bar-Restaurant-Stickerei/129567580399818?ref=ts">FACEBOOK</a> SITE<br>
+WIR SIND MANCHMAL AUCH MUSIKALISCH! MEHR INFOS ÜBER UNSERE <a href="http://www.facebook.com/pages/Sankt-Gallen-Switzerland/Cafe-Bar-Restaurant-Stickerei/129567580399818?ref=ts">FACEBOOK</a> SITE<br>
 .<br>
 .<br>
 .<br>
